methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:22: error: not found: value makePattern
    makePattern()
    ^