methods.picture.PictureMono2.scala.code
def makeV() {
  forward()
  forward()
  forward()
  brushDown()
  right()
  forward()
  brushUp()
  left()
  forward()
  brushDown()
  forward()
  brushUp()
  left()
  forward()
  brushDown()
  right()
}
override def run() {  
  for (stepper <- 1 to 4){
    run()
    makePattern()
  }
}